package entidades;

public class Cidade {
    private String nome;
    public Cidade(String nome) {
        this.nome = nome;
    }
}
