@startuml
skinparam classAttributeIconSize 0
' left to right direction
caption Diagrama de entidades
namespace entidades {
    class Object{
        + toString():String
    }
    class Cliente {
        - String nome
        - String endereco
        + Cliente(nome:String)
        + getNome():String
        + setNome(nome:String):void
        + getEndereco():String
        + setEndereco(endereco:String ):void
        + toString():String
        + getCidade():Cidade
        + setCidade(cidade:Cidade):void
    }
    class Cidade {
        - String nome
        + Cidade(nome:String)
    }
    class Fornecedor {
        - String nome
        + Fornecedor(nome:String)
        + getCidade():Cidade
        + setCidade(cidade:Cidade):void
    }
    class Pokemon {
        - String nome
        + Pokemon(nome:String)
        + toString():String
    }

    Cliente --|> Object
    Cliente "-cidade *" -> "1" Cidade
    Cliente "-listaPokemon 1" -> "*" Pokemon
    Fornecedor "-cidade *" -> "1" Cidade
}
namespace javax.swing {
    class JFrame {
    }
}
namespace telas {
    
    class TelaPrincipal {
        + TelaPrincipal()   
    }
    TelaPrincipal --|> javax.swing.JFrame
    TelaPrincipal --> controladores.TelaPrincipalControlador
}
namespace controladores {
    class TelaPrincipalControlador{
        + actionPerformed(e:ActionEvent):void
    }
    TelaPrincipalControlador ..|> java.awt.event.ActionListener
}
namespace java.awt.event {
    interface ActionListener{
        + actionPerformed(e:ActionEvent):void
    }
}
@enduml